--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             
             
         </ol>
+        <div class="pagination">
+            <button id="loadMore" type="button">
+               load more
+            </button>
+        </div>
     </section>
     <script src="assets/js/pokemon-model.js"></script>
     <script src="assets/js/poke-api.js"></script>
